<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wifi_fragment_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="600dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/file_share_fragment_btn_send"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/file_share_send_button"
            android:visibility="visible" />

        <Button
            android:id="@+id/file_share_fragment_btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/file_share_cancel_button"
            android:visibility="visible" />

        <Button
            android:id="@+id/file_share_fragment_btn_enable_ble"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/file_share_enable_ble_button"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/file_share_fragment_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:textSize="24sp"/>
</LinearLayout>